переделал все для яндекс музыки

--- a/templates/vk/replacing.html
+++ b/templates/vk/replacing.html
@@ -57,7 +57,7 @@
             <button id="transfer">перенос</button>
             <div id="user_agreement" style="display: none;">
                 *Нажимая на кнопку оплатить вы соглашаеетесь с 
-                <a href="/static/Spotifier Пользовательское Соглашение.pdf" target="_blank">пользовательским соглашением</a>
+                <a href="/static/Spotifier%20Пользовательское%20Соглашение.pdf" target="_blank">пользовательским соглашением</a>
             </div>
         </div>
         <div id="errors">
@@ -90,7 +90,7 @@
             <div>
                 Вы можете перенести 100 любых треков бесплатно, а после оплаты 69 руб.
                 мы снимем ограничение на перенос. Нажимая на кнопку оплатить вы соглашаетесь
-                с <a href="/static/Spotifier Пользовательское Соглашение.pdf">пользовательским соглашением.</a>
+                с <a href="/static/Spotifier%20Пользовательское%20Соглашение.pdf">пользовательским соглашением.</a>
             </div>
         </div>
     </div>
