--- a/templates/yandex/index.html
+++ b/templates/yandex/index.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" href="/static/mobile-css1000px.css" media="only screen and (min-device-width: 1000px)" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Перенос музыки из vk в spotify всего за пару кликов. Ваши данные будут в полной безопасности" />
+        <meta name="description" content="Перенос музыки из yandex music в spotify всего за пару кликов. Ваши данные будут в полной безопасности" />
 
         <title>Spotifier</title>
     </head>
@@ -53,12 +53,12 @@
             <div class="banner">
                 <h1>
                     <div class="smth-1">Перенести</div>
-                    <div class="test">C VK В SPOTIFY</div>
+                    <div class="test">C YANDEX MUSIC В SPOTIFY</div>
                 </h1>
                 
                 <div class="btn-start">
                     <div id="hidden"></div>
-                    <button onclick="window.location.href = '/auth_vk';" id="btn">Начать</button>
+                    <button onclick="window.location.href = '/yandex-music/auth';" id="btn">Начать</button>
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
                 <header class="qst">
                     <p>Как все перенести?</p>
                     <div>
-                        Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пара минут, и ты
+                        Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Yandex Music, заходишь в Spotify и ждешь. Пара минут, и ты
                         можешь наслаждаться своей любимой музыкой в Spotify, который начнет учитывать твои вкусы.
                     </div>
                 </header>
@@ -85,7 +85,7 @@
                     <div>
                         Вы можете перенести 100 любых треков бесплатно, а после оплаты 69 руб.
                         мы снимем ограничение на перенос. Нажимая на кнопку оплатить вы соглашаетесь
-                        с <a href="/static/Spotifier Пользовательское Соглашение.pdf">пользовательским соглашением.</a>
+                        с <a href="/static/Spotifier%20Пользовательское%20Соглашение.pdf">пользовательским соглашением.</a>
                     </div>
                 </div>
             </div>
