--- a/templates/yandex/yandex_form.html
+++ b/templates/yandex/yandex_form.html
@@ -27,7 +27,7 @@
         <meta name="theme-color" content="#000000" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
-        <title>Авторизация VK</title>
+        <title>Авторизация Yandex Music</title>
 </head>
 <body>
 <div class="wrapper">
@@ -51,13 +51,13 @@
 
         <div class="banner">
             <div class="smth-1">Перенести</div>
-            <div class="test">C VK В SPOTIFY</div>
+            <div class="test">C YANDEX MUSIC В SPOTIFY</div>
         </div>
 
 <div class="btn-start">
     <div class="vk_form">
         <div class="vk_auth">
-            <span>Авторизация VK</span>
+            <span>Авторизация YANDEX MUSIC</span>
         </div>
        
             <div class="vk_auth_login" id="vk_auth_login">
@@ -83,7 +83,7 @@
             </div>
             <div class="vk_auth_submit">
                 <p>
-                    <button onclick="auth()" id="vk_button" type="submit" value="Войти">Войти в вк</button>
+                    <button onclick="auth()" id="vk_button" type="submit" value="Войти">Войти в яндекс музыку</button>
                 </p>
             </div>
         
@@ -123,7 +123,7 @@
                 <div>
                     Вы можете перенести 100 любых треков бесплатно, а после оплаты 69 руб.
                     мы снимем ограничение на перенос. Нажимая на кнопку оплатить вы соглашаетесь
-                    с <a href="/static/Spotifier Пользовательское Соглашение.pdf">пользовательским соглашением.</a>
+                    с <a href="/static/Spotifier%20Пользовательское%20Соглашение.pdf">пользовательским соглашением.</a>
                 </div>
             </div>
         </div>
