--- a/templates/vk/spotify_form.html
+++ b/templates/vk/spotify_form.html
@@ -80,7 +80,7 @@
                 <div>
                     Вы можете перенести 100 любых треков бесплатно, а после оплаты 69 руб.
                     мы снимем ограничение на перенос. Нажимая на кнопку оплатить вы соглашаетесь
-                    с <a href="/static/Spotifier Пользовательское Соглашение.pdf">пользовательским соглашением.</a>
+                    с <a href="/static/Spotifier%20Пользовательское%20Соглашение.pdf">пользовательским соглашением.</a>
                 </div>
             </div>
         </div>
