--- a/static/mobile-css300px.css
+++ b/static/mobile-css300px.css
@@ -247,6 +247,74 @@ a {
   min-height: auto;
 }
 
+.b-container{
+  width:200px;
+  height:150px;
+  background-color: #ccc;
+  margin:0px auto;
+  padding:10px;
+  font-size:30px;
+  color: #fff;
+}
+.b-popup{
+  width:100%;
+  min-height:100%;
+  background-color: rgba(0,0,0,0.5);
+  overflow:hidden;
+  position:fixed;
+  top:0px;
+  left: 0;
+  font-size: 17px;
+}
+.b-popup .b-popup-content{
+  margin: 40px auto 0px auto;
+  width: 315px;
+  padding: 10px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px #000;
+  
+}
+
+.text-spotifier {
+  color: #a4c486;
+}
+
+.text-vk {
+  color: #709BCB;
+}
+
+.text-title {
+  text-align: center;
+  margin: 20px;
+  font-size: 20px;
+  display: block;
+}
+
+.buttons *{
+  background: #709BCB;
+  border-radius: 5px;
+  padding: 5px;
+  color: black;
+  font-size: 18px;
+}
+
+.buttons #cancel {
+  margin-right: 50px;
+  background-color: red;
+}
+
+.text-desc {
+  text-align: left;
+  margin-top: 40px;
+}
+
+.auth-list {
+  margin-top: 0;
+  text-align: left;
+  margin-bottom: 45px;
+}
+
 
 #wrong_code_hidden {
   display: none;
