--- a/templates/vk_form.html
+++ b/templates/vk_form.html
@@ -86,7 +86,7 @@
                     <button onclick="PopUpShow()" id="vk_button" type="submit" value="Войти">Войти в вк</button>
                 </p>
             </div>
-            <div class="b-popup" id="popup1">
+            <div class="b-popup" id="popup1" style="display: none;">
                 <div class="b-popup-content">
                     <div class="text-title">
                         <strong class="text-spotifier">Spotifier</strong> 
