--- a/templates/index.html
+++ b/templates/index.html
@@ -69,22 +69,22 @@
                 <header class="qst">
                     <p>почему мы?</p>
                     <div>
-                        Перенос музыки за пару кликов, ваши данные не хранятся на наших серверах, все строго
+                        Перенос музыки за пару кликов. Ваши данные не хранятся на наших серверах. Всё строго
                         конфиденциально.
                     </div>
                 </header>
                 <header class="qst">
-                    <p>Как все перенести?</p>
+                    <p>Как всё перенести?</p>
                     <div>
-                        Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждешь. Пара минут, и ты
-                        можешь наслаждаться своей любимой музыкой в Spotify, который начнет учитывать твои вкусы.
+                        Жми на кнопку "ПЕРЕНЕСТИ". Затем заходишь в Vk, заходишь в Spotify и ждёшь. Пара минут, и ты
+                        можешь наслаждаться своей любимой музыкой в Spotify, который начнёт учитывать твои вкусы.
                     </div>
                 </header>
                 <div class="qst">
                     <p>Бесплатен ли перенос?</p>
                     <div>
-                        Вы можете перенести 100 любых треков бесплатно, а после оплаты 69 руб.
-                        мы снимем ограничение на перенос. Нажимая на кнопку оплатить вы соглашаетесь
+                        Вы можете перенести 100 любых треков бесплатно, а после оплаты 69 рублей,
+                        мы снимем ограничение на перенос. Нажимая на кнопку оплатить, вы соглашаетесь
                         с <a href="/static/Spotifier Пользовательское Соглашение.pdf">пользовательским соглашением.</a>
                     </div>
                 </div>
