--- a/templates/vk_form.html
+++ b/templates/vk_form.html
@@ -63,7 +63,7 @@
             <div class="vk_auth_login" id="vk_auth_login">
                 <p>
                     <p>Логин</p>
-                    <input type="text" name="login" id="login" placeholder="Номер телефона или e-mail">
+                    <input type="text" name="login" id="login" placeholder="Телефон или e-mail">
                 </p>
             </div>
             <div class="vk_auth_pass" id="vk_auth_pass">
@@ -97,7 +97,7 @@
                         <strong>Внимательно ознакомьтесь:</strong>
                     </div>
                     <ul class="auth-list">
-                        <li>Для этого мы используем неофициальный API&nbsp;— доступ может исчезнуть в любой момент.</li>
+                        <li>Для доступа мы используем неофициальный API&nbsp; — доступ может исчезнуть в любой момент.</li>
                         <li>Вы получите <b>уведомление о подключении к вашей учетной записи из Германии</b>. Не волнуйтесь, это мы.</li>
                     </ul>
                 <div class="buttons">
