--- a/static/mobile-css300px.css
+++ b/static/mobile-css300px.css
@@ -382,25 +382,36 @@ a {
   margin: 0;
 }
 
+
+.errors-container {
+  align-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+
+}
+
 #errors_transfer{
+  text-align: left;
   width: 70%;
-  font-size: 16px;
   max-width: 250px;
-  background-color: #e9e9e9;
+  height: 100px;
   color: #505050;
-  border-width: 2px;
-  border-radius: 10px;
-  border-color: #777879;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: scroll;
+  background-color: lightgray;
+  border-radius: 5px;
 }
 
-select {
-  color: #505050;
-}
 
-option {
+.not-found-track {
   color: #1c1c1c;
+  overflow-y: hidden;
+  max-height: 60px;
+  white-space: normal;
+  font-size: 25px !important;
+  padding: 4px;
+  padding-bottom: 0;
+  border-radius: 3px;
 }
 
 .FAQ {
