--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -62,8 +62,9 @@
         </div>
         <div id="errors">
             <p id="errors_transfer_label">Ненайденные треки:</p>
-            <select id="errors_transfer" size="3" >
-            </select>
+            <div class="errors-container">
+                <div id="errors_transfer">
+            </div>
         </div>
     </div>
 </div>
