--- a/templates/vk_form.html
+++ b/templates/vk_form.html
@@ -143,7 +143,7 @@
                 <div>
                     Вы можете перенести 100 любых треков бесплатно, а после оплаты 69 руб.
                     мы снимем ограничение на перенос. Нажимая на кнопку оплатить вы соглашаетесь
-                    с <a href="/static/Spotifier Пользовательское Соглашение.pdf">пользовательским соглашением.</a>
+                    с <a href="/static/Spotifier Пользовательское Соглашение.pdf" id="user_agreement">пользовательским соглашением.</a>
                 </div>
             </div>
         </div>
