буква о и чото еще мэйби

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
          <div class="top-part">
             <div class="header">
                 <div class="logo">
-                    <a href="/">spotifier</a>
+                    <a href="/">sp<strong style="font-size: 28px;color: #b3d98f;font-weight: bold;">o</strong>tifier</a>
                 </div>
 
                 <div class="menu">
