--- a/templates/replacing.html
+++ b/templates/replacing.html
@@ -55,7 +55,7 @@
         <div class="btn-start">
             <div id="hidden"></div>
             <button id="transfer">перенос</button>
-            <div id="user_agreement" style="display: none;">
+            <div id="user_agreement_popup" style="display: none;">
                 *Нажимая на кнопку оплатить вы соглашаеетесь с 
                 <a href="/static/Spotifier Пользовательское Соглашение.pdf" target="_blank">пользовательским соглашением</a>
             </div>
