--- a/static/mobile-css300px.css
+++ b/static/mobile-css300px.css
@@ -412,6 +412,16 @@ a {
   text-decoration-line:underline ;
 }
 
+#user_agreement_popup {
+  font-size: 20px;
+}
+
+#user_agreement_popup a{
+  font-size: 20px;
+  text-decoration-line: underline;
+}
+
+
 .not-found-track {
   color: #1c1c1c;
   overflow-y: hidden;
