фикс для буквы о в лого

--- a/static/mobile-css300px.css
+++ b/static/mobile-css300px.css
@@ -40,6 +40,12 @@ body * {
   text-transform: uppercase;
 }
 
+#letter-o {
+  font-size: 17px;
+  font-weight: bold;
+  color: #b3d98f;
+}
+
 .vk_auth {
   display: inline-block;
   padding: 5px 6px;
