--- a/static/mobile-css1000px.css
+++ b/static/mobile-css1000px.css
@@ -8,6 +8,12 @@
   font-size: 24px;
 }
 
+#letter-o {
+  font-size: 28px;
+  font-weight: bold;
+  color: #b3d98f;
+}
+
 
 /*Что это?*/
 .logo span {
