Страничка авторизации + адаптивный дизайн ver1.1 + ебал Андрея

--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -1,15 +1,8 @@
 body {
     background-color: $main-color;
     font-family: "Roboto";
-    width: fit-content;
+    width: $width;
+    overflow-x: hidden;
 }
 
-.test-text {
-    background-color: red;
-    font-weight: 400;
-    margin: 10px;
-    text-align: center;
-    font-size: 1.5vw;
-    width: 250px;
-    height: 100px;
-}
+@import "./auth.scss"
