--- a/templates/auth.html
+++ b/templates/auth.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
+
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function(m, e, t, r, i, k, a) {
@@ -33,12 +34,25 @@
     <title>Spotifier</title>
 </head>
 
-<body onresize="resizeAllElements()" onload="resizeAllElements()">
-    <div class="resizable test-text">asdasd</div>
-    <div class="resizable test-text">asdasd</div>
-    <div class="resizable">asdasd</div>
+<body class="body auth" onresize="resizeAllElements()" onload="resizeAllElements()">
+    <img src="/static/images/spotifier-logo.svg" alt="" srcset="" class="resizable auth logo">
+    <div class="resizable auth container">
+        <div class="resizable auth login-text">Войти</div>
+        <div class="resizable auth login-container google">
+            <img src="/static/images/google-logo.svg" class="resizable auth company-logo">
+            <a href={{google}} class="resizable auth login-url google-url"> Войти с помощью Google</a>
+        </div>
+        <div class="resizable auth login-container vk">
+            <img src="/static/images/vk-logo.svg" class="resizable auth company-logo">
+            <a href={{vk}} class="resizable auth login-url vk-url"> Войти с помощью Вконтакте</a>
+        </div>
+        <div class="resizable auth login-container spotify">
+            <img src="/static/images/spotify-logo.svg" class="resizable auth company-logo">
+            <a href={{spotify}} class="resizable auth login-url spotify-url"> Войти с помощью Spotify</a>
+        </div>
+    </div>
 
-    <div class="resizable">asdasd</div>
+
 
 
 </body>
