--- a/static/index.css
+++ b/static/index.css
@@ -56,80 +56,137 @@ fieldset,
 form,
 label,
 legend {
-    vertical-align: baseline;
-    font-family: inherit;
-    font-weight: inherit;
-    font-style: inherit;
-    font-size: 100%;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    border: 0;
+  vertical-align: baseline;
+  font-family: inherit;
+  font-weight: inherit;
+  font-style: inherit;
+  font-size: 100%;
+  outline: 0;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 
-
 /* remember to define focus styles! */
-
 :focus {
-    outline: 0;
+  outline: 0;
 }
 
 body {
-    background: white;
-    line-height: 1;
-    color: black;
+  background: white;
+  line-height: 1;
+  color: black;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
-
 /* tables still need cellspacing="0" in the markup */
-
 table {
-    border-collapse: separate;
-    border-spacing: 0;
+  border-collapse: separate;
+  border-spacing: 0;
 }
 
 caption,
 th,
 td {
-    font-weight: normal;
-    text-align: left;
+  font-weight: normal;
+  text-align: left;
 }
 
-
 /* remove possible quote marks (") from <q> & <blockquote> */
-
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-    content: "";
+  content: "";
 }
 
 blockquote,
 q {
-    quotes: "" "";
+  quotes: "" "";
 }
 
 body {
-    background-color: #302E60;
-    font-family: "Roboto";
-    width: fit-content;
+  background-color: #302E60;
+  font-family: "Roboto";
+  width: 1440px;
+  overflow-x: hidden;
 }
 
-.test-text {
-    background-color: red;
-    font-weight: 400;
-    margin: 10px;
-    text-align: center;
-    font-size: 1.5vw;
-    width: 250px;
-    height: 100px;
+.auth.logo {
+  width: 256px;
+  height: 256px;
+  margin: 0 592px;
 }
-
+.auth.container {
+  background-color: #434080;
+  width: 360px;
+  height: 420px;
+  margin: 0 540px;
+  border-radius: 16px;
+}
+.auth.login-text {
+  margin: 0 140px 0 140px;
+  padding-top: 24px;
+  height: 36px;
+  width: 80px;
+  color: white;
+  font-size: 28px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.auth.login-container {
+  width: 312px;
+  height: 40px;
+  border-radius: 99px;
+}
+.auth.login-container.google {
+  margin: 64px 24px 22px 24px;
+  background-color: white;
+  color: black;
+}
+.auth.login-container.vk {
+  margin: 0px 24px 22px 24px;
+  background-color: #4680C2;
+  color: white;
+}
+.auth.login-container.spotify {
+  margin: 0px 24px 22px 24px;
+  background-color: #00D95F;
+  color: black;
+}
+.auth.company-logo {
+  float: left;
+  width: 24px;
+  height: 24px;
+  margin: 8px 0 8px 16px;
+}
+.auth.login-url {
+  float: right;
+  width: fit-content;
+  height: 14px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: inherit;
+}
+.auth.login-url.google-url {
+  margin-top: 13px;
+  margin-right: 71px;
+}
+.auth.login-url.vk-url {
+  margin-top: 13px;
+  margin-right: 59px;
+}
+.auth.login-url.spotify-url {
+  margin-top: 13px;
+  margin-right: 71px;
+}
 
 /*# sourceMappingURL=index.css.map */
