--- a/templates/auth.html
+++ b/templates/auth.html
@@ -2,35 +2,12 @@
 
 <head>
     <meta charset="utf-8" />
-
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function(m, e, t, r, i, k, a) {
-            m[i] = m[i] || function() {
-                (m[i].a = m[i].a || []).push(arguments)
-            };
-            m[i].l = 1 * new Date();
-            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-        ym(83155189, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
-    </script>
-    <!-- /Yandex.Metrika counter -->
-
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-    </style>
+    <script type="text/javascript" src="/static/js/metrika.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <link rel="stylesheet" href="/static/index.css" />
+    <link rel="icon" href="/static/images/spotifier-logo.svg" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Перенос музыки из vk в spotify всего за пару кликов. Ваши данные будут в полной безопасности" />
-
+    <meta name="description" content="Перенос музыки из между сервисами всего за пару кликов." />
     <title>Spotifier</title>
 </head>
 
