--- a/static/index.css
+++ b/static/index.css
@@ -145,6 +145,7 @@ body {
   width: 312px;
   height: 40px;
   border-radius: 99px;
+  cursor: pointer;
 }
 .auth.login-container.google {
   margin: 64px 24px 22px 24px;
