--- a/static/scss/auth.scss
+++ b/static/scss/auth.scss
@@ -27,6 +27,7 @@
         width: 312px;
         height: 40px;
         border-radius: 99px;
+        cursor: pointer;
         &.google {
             margin: 64px 24px 22px 24px;
             background-color: white;
