--- a/static/index.css
+++ b/static/index.css
@@ -57,294 +57,331 @@ fieldset,
 form,
 label,
 legend {
-  vertical-align: baseline;
-  font-family: inherit;
-  font-weight: inherit;
-  font-style: inherit;
-  font-size: 100%;
-  outline: 0;
-  padding: 0;
-  margin: 0;
-  border: 0;
+    vertical-align: baseline;
+    font-family: inherit;
+    font-weight: inherit;
+    font-style: inherit;
+    font-size: 100%;
+    outline: 0;
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
 
+
 /* remember to define focus styles! */
+
 :focus {
-  outline: 0;
+    outline: 0;
 }
 
 body {
-  background: white;
-  line-height: 1;
-  color: black;
+    background: white;
+    line-height: 1;
+    color: black;
 }
 
 ol,
 ul {
-  list-style: none;
+    list-style: none;
 }
 
+
 /* tables still need cellspacing="0" in the markup */
+
 table {
-  border-collapse: separate;
-  border-spacing: 0;
+    border-collapse: separate;
+    border-spacing: 0;
 }
 
 caption,
 th,
 td {
-  font-weight: normal;
-  text-align: left;
+    font-weight: normal;
+    text-align: left;
 }
 
+
 /* remove possible quote marks (") from <q> & <blockquote> */
+
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
+    content: "";
 }
 
 blockquote,
 q {
-  quotes: "" "";
+    quotes: "" "";
 }
 
 body {
-  background-color: #302E60;
-  font-family: "Roboto";
-  width: 1440px;
-  overflow-x: hidden;
+    background-color: #302E60;
+    font-family: "Roboto";
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 .auth.logo {
-  width: 256px;
-  height: 256px;
-  margin: 0 592px;
+    width: 256px;
+    height: 256px;
+    margin: 0 592px;
 }
+
 .auth.container {
-  background-color: #434080;
-  width: 360px;
-  height: 420px;
-  margin: 0 540px;
-  border-radius: 16px;
+    background-color: #434080;
+    width: 360px;
+    height: 420px;
+    margin: 0 540px;
+    border-radius: 16px;
 }
+
 .auth.login-text {
-  margin: 0 140px 0 140px;
-  padding-top: 24px;
-  height: 36px;
-  width: 80px;
-  color: white;
-  font-size: 28px;
-  font-weight: 500;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    margin: 0 140px 0 140px;
+    padding-top: 24px;
+    height: 36px;
+    width: 80px;
+    color: white;
+    font-size: 28px;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .auth.login-container {
-  width: 312px;
-  height: 40px;
-  border-radius: 99px;
-  cursor: pointer;
+    width: 312px;
+    height: 40px;
+    border-radius: 99px;
+    cursor: pointer;
 }
+
 .auth.login-container.google {
-  margin: 64px 24px 22px 24px;
-  background-color: white;
-  color: black;
+    margin: 64px 24px 22px 24px;
+    background-color: white;
+    color: black;
 }
+
 .auth.login-container.vk {
-  margin: 0px 24px 22px 24px;
-  background-color: #4680C2;
-  color: white;
+    margin: 0px 24px 22px 24px;
+    background-color: #4680C2;
+    color: white;
 }
+
 .auth.login-container.spotify {
-  margin: 0px 24px 22px 24px;
-  background-color: #00D95F;
-  color: black;
+    margin: 0px 24px 22px 24px;
+    background-color: #00D95F;
+    color: black;
 }
+
 .auth.company-logo {
-  float: left;
-  width: 24px;
-  height: 24px;
-  margin: 8px 0 8px 16px;
+    float: left;
+    width: 24px;
+    height: 24px;
+    margin: 8px 0 8px 16px;
 }
+
 .auth.login-url {
-  float: right;
-  width: fit-content;
-  height: 14px;
-  font-size: 14px;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  color: inherit;
+    float: right;
+    width: fit-content;
+    height: 14px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    color: inherit;
 }
+
 .auth.login-url.google-url {
-  margin-top: 13px;
-  margin-right: 71px;
+    margin-top: 13px;
+    margin-right: 71px;
 }
+
 .auth.login-url.vk-url {
-  margin-top: 13px;
-  margin-right: 59px;
+    margin-top: 13px;
+    margin-right: 59px;
 }
+
 .auth.login-url.spotify-url {
-  margin-top: 13px;
-  margin-right: 71px;
+    margin-top: 13px;
+    margin-right: 71px;
 }
 
 .app.slider {
-  box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
-  background-color: #494781;
-  width: 256px;
-  height: 900px;
+    box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
+    background-color: #494781;
+    width: 256px;
+    height: 900px;
 }
+
 .app.menu-button {
-  width: 24px;
-  height: 24px;
-  margin: 0 16px 0 216px;
-  padding: 16px 0 0 0;
-  background-color: #494781;
-  cursor: pointer;
+    width: 24px;
+    height: 24px;
+    margin: 0 16px 0 216px;
+    padding: 16px 0 0 0;
+    background-color: #494781;
+    cursor: pointer;
 }
+
 .app.personal-info {
-  height: 128px;
-  width: 224px;
-  border-radius: 16px;
-  background-color: #605E9A;
-  margin: 40px 16px 0 16px;
-  display: inline-block;
+    height: 128px;
+    width: 224px;
+    border-radius: 16px;
+    background-color: #605E9A;
+    margin: 40px 16px 0 16px;
+    display: inline-block;
 }
+
 .app.personal-info.logout {
-  width: 16px;
-  height: 16px;
-  float: right;
-  margin: 0 16px 0 0;
-  padding: 18px 0 0 0;
-  cursor: pointer;
+    width: 16px;
+    height: 16px;
+    float: right;
+    margin: 0 16px 0 0;
+    padding: 18px 0 0 0;
+    cursor: pointer;
 }
+
 .app.personal-info.name-lastname {
-  width: 120px;
-  height: 20px;
-  text-align: left;
-  vertical-align: bottom;
-  font-size: 12px;
-  color: white;
-  margin: 20px 8px 0 0;
+    width: 120px;
+    height: 20px;
+    text-align: left;
+    vertical-align: bottom;
+    font-size: 12px;
+    color: white;
+    margin: 20px 8px 0 0;
 }
+
 .app.personal-info.profile-picture {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  float: left;
-  margin: 22px 8px 0 16px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    float: left;
+    margin: 22px 8px 0 16px;
 }
+
 .app.personal-info.subscription-box {
-  background: linear-gradient(90deg, #FF527F 0%, #FD9590 100%);
-  width: 140px;
-  height: 24px;
-  margin: 12px 0 0 0;
-  cursor: pointer;
+    background: linear-gradient(90deg, #FF527F 0%, #FD9590 100%);
+    width: 140px;
+    height: 24px;
+    margin: 12px 0 0 0;
+    cursor: pointer;
 }
+
 .app.personal-info.subscription-box.text {
-  margin: 0 0 0 9px;
-  float: left;
-  padding: 6px 0 0 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  width: 100px;
-  height: 12px;
-  font-size: 10px;
-  background: none;
+    margin: 0 0 0 9px;
+    float: left;
+    padding: 6px 0 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    width: 100px;
+    height: 12px;
+    font-size: 10px;
+    background: none;
 }
+
 .app.personal-info.subscription-box.line {
-  float: left;
-  margin: 4px 0 0 7px;
-  width: 0;
-  height: 16px;
-  background: none;
-  border: 1px solid rgba(250, 238, 239, 0.5);
-  border-radius: 99px;
+    float: left;
+    margin: 4px 0 0 7px;
+    width: 0;
+    height: 16px;
+    background: none;
+    border: 1px solid rgba(250, 238, 239, 0.5);
+    border-radius: 99px;
 }
+
 .app.personal-info.subscription-box.question-mark {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 4px 0 0 0;
-  cursor: pointer;
-  width: 16px;
-  height: 16px;
-  margin: 0;
-  background: none;
-  color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4px 0 0 0;
+    cursor: pointer;
+    width: 16px;
+    height: 16px;
+    margin: 0;
+    background: none;
+    color: white;
 }
+
 .app.personal-info.next-payment {
-  color: #CFC4C5;
-  width: 101px;
-  height: 32px;
-  font-size: 11px;
-  margin: 8px 59px 0 64px;
+    color: #CFC4C5;
+    width: 101px;
+    height: 32px;
+    font-size: 11px;
+    margin: 8px 59px 0 64px;
 }
+
 .app.added-services {
-  width: 194px;
-  height: 72px;
-  margin: 32px 0 0 16px;
-  color: #EBE0E1;
+    width: 194px;
+    height: 72px;
+    margin: 32px 0 0 16px;
+    color: #EBE0E1;
 }
+
 .app.added-services.add-service-button {
-  width: 32px;
-  height: 32px;
-  margin: 16px 0 0 0;
-  cursor: pointer;
+    width: 32px;
+    height: 32px;
+    margin: 16px 0 0 0;
+    cursor: pointer;
 }
+
 .app.transfer-music {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 224px;
-  height: 40px;
-  background: linear-gradient(90deg, #FF527F 0%, #FD9590 100%);
-  color: white;
-  border-radius: 99px;
-  text-align: center;
-  margin: 64px 0 0 16px;
-  cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 224px;
+    height: 40px;
+    background: linear-gradient(90deg, #FF527F 0%, #FD9590 100%);
+    color: white;
+    border-radius: 99px;
+    text-align: center;
+    margin: 64px 0 0 16px;
+    cursor: pointer;
 }
+
 .app.music-container {
-  width: 225px;
-  height: 184px;
-  margin: 48px 0 0 16px;
+    width: 225px;
+    height: 184px;
+    margin: 48px 0 0 16px;
 }
+
 .app.music-container.my-box {
-  width: 224px;
-  height: 40px;
-  background: rgba(65, 64, 120, 0.5);
-  border-radius: 99px;
-  margin: 8px 0 0 0;
-  cursor: pointer;
+    width: 224px;
+    height: 40px;
+    background: rgba(65, 64, 120, 0.5);
+    border-radius: 99px;
+    margin: 8px 0 0 0;
+    cursor: pointer;
 }
+
 .app.music-container.my-box.image {
-  width: 24px;
-  height: 24px;
-  margin: 8px 0 0 15px;
-  float: left;
+    width: 24px;
+    height: 24px;
+    margin: 8px 0 0 15px;
+    float: left;
 }
+
 .app.music-container.my-box.text {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  width: 107px;
-  height: 20px;
-  font-size: 14px;
-  padding: 10px;
-  background: none;
-  margin: 0;
-  float: left;
-  color: #CFC4C5;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 107px;
+    height: 20px;
+    font-size: 14px;
+    padding: 10px;
+    background: none;
+    margin: 0;
+    float: left;
+    color: #CFC4C5;
 }
+
 .app.spotifier-logo {
-  width: 256px;
-  height: 232px;
+    width: 256px;
+    height: 232px;
 }
+
 
 /*# sourceMappingURL=index.css.map */
