--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -1,7 +1,8 @@
 body {
     background-color: $main-color;
     font-family: "Roboto";
-    width: $width;
+    width: 100%;
+    height: 100%;
     overflow-x: hidden;
 }
 
