--- a/templates/auth.html
+++ b/templates/auth.html
@@ -27,6 +27,10 @@
             <img src="/static/images/spotify-logo.svg" class="resizable auth company-logo">
             <a href={{spotify}} class="resizable auth login-url spotify-url"> Войти с помощью Spotify</a>
         </div>
+        <div class="resizable auth login-container yandex">
+            <img src="/static/images/yandex-logo.svg" class="resizable auth company-logo">
+            <a href={{yandex}} class="resizable auth login-url yandex-url"> Войти с помощью Yandex</a>
+        </div>
     </div>
 
 
