--- a/templates/app.html
+++ b/templates/app.html
@@ -14,7 +14,7 @@
 
 <body class="body app" onload="resizeAllElements()" onresize="resizeAllElements()">
     <div class="resizable app slider">
-        <img src="/static/images/menu-opened.svg" class="resizable app menu-button">
+        <img src="/static/images/menu-opened.svg" class="resizable app menu-button" onclick="hideMenu()">
         <div class="resizable app personal-info">
             <img src="{{ url_for('serve_img') }}" alt="no avatar" class="resizable app personal-info profile-picture">
             <div class="resizable app personal-info name-lastname">{{ name }}</div>
@@ -33,27 +33,46 @@
         <div class="resizable app transfer-music">
             Перенести музыку
         </div>
+        <div class="resizable app menu-options">
+            <img src="/static/images/account-circle.svg" alt="profile" class="resizable app menu-options image profile">
+            <img src="/static/images/add-service-box.svg" alt="profile" class="resizable app menu-options image add-service">
+            <img src="/static/images/playlists.svg" alt="profile" class="resizable app menu-options image playlists">
+            <img src="/static/images/tracks.svg" alt="profile" class="resizable app menu-options image tracks">
+            <img src="/static/images/artists.svg" alt="profile" class="resizable app menu-options image artists">
+            <img src="/static/images/albums.svg" alt="profile" class="resizable app menu-options image albums">
+
+        </div>
         <div class="resizable app music-container">
-            <div class="resizable app music-container my-box playlists">
+            <div class="resizable app music-container my-box playlists" onclick="choose()">
                 <img src="/static/images/playlists.svg" class="resizable app music-container my-box image playlists">
                 <div class="resizable app music-container my-box text playlists">Мои плейлисты</div>
+                <img src="/static/images/right-arrow.svg" class="resizable app music-container my-box right-arrow playlists">
             </div>
-            <div class="resizable app music-container my-box tracks">
+            <div class="resizable app music-container my-box tracks" onclick="choose()">
                 <img src="/static/images/tracks.svg" class="resizable app music-container my-box image tracks">
                 <div class="resizable app music-container my-box text tracks">Мои треки</div>
+                <img src="/static/images/right-arrow.svg" class="resizable app music-container my-box right-arrow tracks">
 
             </div>
-            <div class="resizable app music-container my-box artists">
+            <div class="resizable app music-container my-box artists" onclick="choose()">
                 <img src="/static/images/artists.svg" class="resizable app music-container my-box image artists">
                 <div class="resizable app music-container my-box text artists">Мои артисты</div>
+                <img src="/static/images/right-arrow.svg" class="resizable app music-container my-box right-arrow artists">
+
             </div>
-            <div class="resizable app music-container my-box albums">
+            <div class="resizable app music-container my-box albums" onclick="choose()">
                 <img src="/static/images/albums.svg" class="resizable app music-container my-box image albums">
                 <div class="resizable app music-container my-box text albums">Мои альбомы</div>
+                <img src="/static/images/right-arrow.svg" class="resizable app music-container my-box right-arrow albums">
+
             </div>
 
         </div>
         <img src="/static/images/spotifier-logo.svg" class="resizable app spotifier-logo">
     </div>
+    <div class="resizable app main-container">
+
+    </div>
 </body>
 <script src="/static/js/adaptive-design.js"></script>
+<script src="/static/js/app.js"></script>
