Полное добавление возможности автоплатежа

--- a/templates/app.html
+++ b/templates/app.html
@@ -20,7 +20,7 @@
             <div class="resizable app personal-info name-lastname">{{ name }}</div>
             <img src="/static/images/logout.svg" onclick="logout()" class="resizable app personal-info logout">
             <div class="resizable app personal-info subscription-box">
-                <div class="resizable app personal-info subscription-box text"><a href={{ kassa }}>Оформить подписку</a></div>
+                <div class="resizable app personal-info subscription-box text"><a href={{ kassa }}>{{ kassa_text }}</a></div>
                 <div class="resizable app personal-info subscription-box line"></div>
                 <div class="resizable app personal-info subscription-box question-mark">?</div>
             </div>
