--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -2,7 +2,7 @@ body {
     background-color: $main-color;
     font-family: "Roboto";
     width: 100%;
-    height: 100%;
+    height: max-content;
     overflow-x: hidden;
 }
 
